--- a/Server/package.json
+++ b/Server/package.json
@@ -15,11 +15,14 @@
     "nodemon": "^2.0.21"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mysql2": "^3.2.0",
     "uuid": "^9.0.0"
   }
